<resources>
    <string name="app_name">Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="placements">Placements</string>
    <string name="training">Training</string>
    <string name="materials">Materials</string>
    <string name="suggestions">Suggestions</string>
</resources>
